--- a/B. Keep Up/Part 1. Parse and Structure Data.ipynb
+++ b/B. Keep Up/Part 1. Parse and Structure Data.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -48,10 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class extract:\n",
@@ -85,18 +83,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "id_extraction = extract()\n",
@@ -114,10 +108,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "extract_group = extract()\n",
@@ -146,10 +138,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "file = extract()\n",
@@ -158,7 +148,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Total items: 548552\\n',\n",
+       " '\\n',\n",
+       " 'Id:   0\\n',\n",
+       " 'ASIN: 0771044445\\n',\n",
+       " '  discontinued product\\n',\n",
+       " '\\n',\n",
+       " 'Id:   1\\n',\n",
+       " 'ASIN: 0827229534\\n',\n",
+       " '  title: Patterns of Preaching: A Sermon Sampler\\n',\n",
+       " '  group: Book\\n',\n",
+       " '  salesrank: 396585\\n',\n",
+       " '  similar: 5  0804215715  156101074X  0687023955  0687074231  082721619X\\n',\n",
+       " '  categories: 2\\n',\n",
+       " '   |Books[283155]|Subjects[1000]|Religion & Spirituality[22]|Christianity[12290]|Clergy[12360]|Preaching[12368]\\n',\n",
+       " '   |Books[283155]|Subjects[1000]|Religion & Spirituality[22]|Christianity[12290]|Clergy[12360]|Sermons[12370]\\n',\n",
+       " '  reviews: total: 2  downloaded: 2  avg rating: 5\\n',\n",
+       " '    2000-7-28  cutomer: A2JW67OY8U6HHK  rating: 5  votes:  10  helpful:   9\\n',\n",
+       " '    2003-12-14  cutomer: A2VE83MZF98ITY  rating: 5  votes:   6  helpful:   5\\n',\n",
+       " '\\n',\n",
+       " 'Id:   2\\n',\n",
+       " 'ASIN: 0738700797\\n',\n",
+       " '  title: Candlemas: Feast of Flames\\n',\n",
+       " '  group: Book\\n',\n",
+       " '  salesrank: 168596\\n',\n",
+       " '  similar: 5  0738700827  1567184960  1567182836  0738700525  0738700940\\n',\n",
+       " '  categories: 2\\n',\n",
+       " '   |Books[283155]|Subjects[1000]|Religion & Spirituality[22]|Earth-Based Religions[12472]|Wicca[12484]\\n',\n",
+       " '   |Books[283155]|Subjects[1000]|Religion & Spirituality[22]|Earth-Based Religions[12472]|Witchcraft[12486]\\n',\n",
+       " '  reviews: total: 12  downloaded: 12  avg rating: 4.5\\n',\n",
+       " '    2001-12-16  cutomer: A11NCO6YTE4BTJ  rating: 5  votes:   5  helpful:   4\\n',\n",
+       " '    2002-1-7  cutomer:  A9CQ3PLRNIR83  rating: 4  votes:   5  helpful:   5\\n',\n",
+       " '    2002-1-24  cutomer: A13SG9ACZ9O5IM  rating: 5  votes:   8  helpful:   8\\n',\n",
+       " '    2002-1-28  cutomer: A1BDAI6VEYMAZA  rating: 5  votes:   4  helpful:   4\\n',\n",
+       " '    2002-2-6  cutomer: A2P6KAWXJ16234  rating: 4  votes:  16  helpful:  16\\n',\n",
+       " '    2002-2-14  cutomer:  AMACWC3M7PQFR  rating: 4  votes:   5  helpful:   5\\n',\n",
+       " '    2002-3-23  cutomer: A3GO7UV9XX14D8  rating: 4  votes:   6  helpful:   6\\n',\n",
+       " '    2002-5-23  cutomer: A1GIL64QK68WKL  rating: 5  votes:   8  helpful:   8\\n',\n",
+       " '    2003-2-25  cutomer:  AEOBOF2ONQJWV  rating: 5  votes:   8  helpful:   5\\n',\n",
+       " '    2003-11-25  cutomer: A3IGHTES8ME05L  rating: 5  votes:   5  helpful:   5\\n',\n",
+       " '    2004-2-11  cutomer: A1CP26N8RHYVVO  rating: 1  votes:  13  helpful:   9\\n',\n",
+       " '    2005-2-7  cutomer:  ANEIANH0WAT9D  rating: 5  votes:   1  helpful:   1\\n',\n",
+       " '\\n',\n",
+       " 'Id:   3\\n',\n",
+       " 'ASIN: 0486287785\\n',\n",
+       " '  title: World War II Allied Fighter Planes Trading Cards\\n',\n",
+       " '  group: Book\\n',\n",
+       " '  salesrank: 1270652\\n',\n",
+       " '  similar: 0\\n',\n",
+       " '  categories: 1\\n',\n",
+       " '   |Books[283155]|Subjects[1000]|Home & Garden[48]|Crafts & Hobbies[5126]|General[5144]\\n',\n",
+       " '  reviews: total: 1  downloaded: 1  avg rating: 5\\n',\n",
+       " '    2003-7-10  cutomer: A3IDGASRQAW8B2  rating: 5  votes:   2  helpful:   2\\n',\n",
+       " '\\n',\n",
+       " 'Id:   4\\n',\n",
+       " 'ASIN: 0842328327\\n',\n",
+       " '  title: Life Application Bible Commentary: 1 and 2 Timothy and Titus\\n',\n",
+       " '  group: Book\\n',\n",
+       " '  salesrank: 631289\\n',\n",
+       " '  similar: 5  0842328130  0830818138  0842330313  0842328610  0842328572\\n',\n",
+       " '  categories: 5\\n',\n",
+       " '   |Books[283155]|Subjects[1000]|Religion & Spirituality[22]|Christianity[12290]|Reference[172810]|Commentaries[12155]|New Testament[12159]\\n',\n",
+       " '   |Books[283155]|Subjects[1000]|Religion & Spirituality[22]|Christianity[12290]|Christian Living[12333]|Discipleship[12335]\\n',\n",
+       " '   |Books[283155]|Subjects[1000]|Religion & Spirituality[22]|Christianity[12290]|Bibles[12059]|Translations[764432]|Life Application[572080]\\n',\n",
+       " '   |Books[283155]|Subjects[1000]|Religion & Spirituality[22]|Bible & Other Sacred Texts[12056]|Bible[764430]|New Testament[572082]\\n',\n",
+       " '   |Books[283155]|Subjects[1000]|Religion & Spirituality[22]|Christianity[12290]|Bibles[12059]|Study Guides, History & Reference[764438]|General[572094]\\n',\n",
+       " '  reviews: total: 1  downloaded: 1  avg rating: 4\\n',\n",
+       " '    2004-8-19  cutomer: A2591BUPXCS705  rating: 4  votes:   1  helpful:   1\\n',\n",
+       " '\\n',\n",
+       " 'Id:   5\\n',\n",
+       " 'ASIN: 1577943082\\n',\n",
+       " '  title: Prayers That Avail Much for Business: Executive\\n',\n",
+       " '  group: Book\\n',\n",
+       " '  salesrank: 455160\\n',\n",
+       " '  similar: 5  157794349X  0892749504  1577941829  0892749563  1577946006\\n',\n",
+       " '  categories: 2\\n',\n",
+       " '   |Books[283155]|Subjects[1000]|Religion & Spirituality[22]|Christianity[12290]|Worship & Devotion[12465]|Prayerbooks[12470]\\n',\n",
+       " '   |Books[283155]|Subjects[1000]|Religion & Spirituality[22]|Christianity[12290]|Christian Living[12333]|Business[297488]\\n',\n",
+       " '  reviews: total: 0  downloaded: 0  avg rating: 0\\n',\n",
+       " '\\n',\n",
+       " 'Id:   6\\n',\n",
+       " 'ASIN: 0486220125\\n',\n",
+       " '  title: How the Other Half Lives: Studies Among the Tenements of New York\\n',\n",
+       " '  group: Book\\n',\n",
+       " '  salesrank: 188784\\n',\n",
+       " '  similar: 5  0486401960  0452283612  0486229076  0714840343  0374528993\\n',\n",
+       " '  categories: 5\\n',\n",
+       " '   |Books[283155]|Subjects[1000]|Arts & Photography[1]|Photography[2020]|Photo Essays[2082]\\n',\n",
+       " '   |Books[283155]|Subjects[1000]|History[9]|Americas[4808]|United States[4853]|General[4870]\\n',\n",
+       " '   |Books[283155]|Subjects[1000]|History[9]|Jewish[4992]|General[4993]\\n',\n",
+       " '   |Books[283155]|Subjects[1000]|Nonfiction[53]|Social Sciences[11232]|Sociology[11288]|Urban[11296]\\n',\n",
+       " '   |[172282]|Categories[493964]|Camera & Photo[502394]|Photography Books[733540]|Photo Essays[733676]\\n',\n",
+       " '  reviews: total: 17  downloaded: 17  avg rating: 4\\n',\n",
+       " '    1997-7-4  cutomer:  ATVPDKIKX0DER  rating: 5  votes:  12  helpful:  11\\n',\n",
+       " '    1998-10-11  cutomer:  AUEZ7NVOEHYRY  rating: 5  votes:  13  helpful:  12\\n',\n",
+       " '    1999-4-15  cutomer:  ATVPDKIKX0DER  rating: 5  votes:  18  helpful:   7\\n',\n",
+       " '    2000-1-4  cutomer:  AJYG6ZJUQPZ9M  rating: 4  votes:  14  helpful:  10\\n',\n",
+       " '    2000-2-8  cutomer: A2ESGJTTLJWIAK  rating: 5  votes:  17  helpful:  11\\n',\n",
+       " '    2000-4-28  cutomer: A2CHULHAO3A9BY  rating: 5  votes:  23  helpful:  16\\n',\n",
+       " '    2001-10-9  cutomer: A3BNWP7ATVP045  rating: 5  votes:   7  helpful:   6\\n']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[file[i] for i in np.arange(1,100)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,10 +310,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_id_row_lookup['review_start'] = df_id_row_lookup.Rows.isin(review_extraction.line_location) + 0\n",
@@ -214,10 +320,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_id_row_lookup['group_start'] = df_id_row_lookup.Rows.isin(extract_group.line_location) + 0 \n",
@@ -236,10 +340,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "detail_index = df_id_row_lookup\n",
@@ -260,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -269,17 +371,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -378,7 +480,7 @@
        "4       75.0         11  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,15 +502,159 @@
     "rank_value = [np.str.split(np.str.strip(i))[1] for i in extract_rank.line_content]\n",
     "df_rank = pd.DataFrame(list(zip(extract_rank.line_location,rank_value)), columns = ['rank_start','rank'])\n",
     "df_rank = df_rank.merge(df_id_locations[['ID','rank_start']], how = 'inner')\n",
-    "df_rank_and_group = df_rank.merge(df_groups, on = 'ID').drop(['group_start','rank_start'],1)\n",
-    "df_rank_and_group.to_csv(\"rank_and_group.csv\")\n",
     "\n",
+    "df_rank_and_group = df_rank.merge(df_groups, on = 'ID').drop(['group_start','rank_start'],1)\n",
+    "df_rank_and_group.to_csv(\"rank_and_group.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rank</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>group</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>396585</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Book</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>168596</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Book</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1270652</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Book</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      rank ID group\n",
+       "0   396585  1  Book\n",
+       "1   168596  2  Book\n",
+       "2  1270652  3  Book"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_rank_and_group.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sim_start</th>\n",
+       "      <th>variable</th>\n",
+       "      <th>value</th>\n",
+       "      <th>ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>13</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0804215715</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13</td>\n",
+       "      <td>3</td>\n",
+       "      <td>156101074X</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0687023955</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  sim_start variable       value ID\n",
+       "0        13        2  0804215715  1\n",
+       "1        13        3  156101074X  1\n",
+       "2        13        4  0687023955  1"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "sim_items = [np.str.split(np.str.strip(i)) for i in extract_sim.line_content]\n",
     "df_similar = pd.DataFrame(sim_items)\n",
     "df_similar['sim_start'] = extract_sim.line_location\n",
     "df_similar = pd.melt(id_vars = 'sim_start',frame= df_similar.iloc[:,2:])\n",
     "df_similar = df_similar.merge(df_id_locations[['ID','sim_start']], how = 'inner').dropna()\n",
-    "df_similar.to_csv('similar.csv')"
+    "df_similar.to_csv('similar.csv',index = False)\n",
+    "df_similar.head(3)"
    ]
   },
   {
@@ -420,10 +666,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def extract_detail_rows(columns, dont_split = True):\n",
@@ -455,10 +699,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "reviews_frame = extract_detail_rows(columns =  ['ID','review_start', 'end'], dont_split= False)\n",
@@ -476,10 +718,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "categories = extract_detail_rows(columns =  ['ID','category_start', 'review_start'], dont_split= True)"
@@ -494,10 +734,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "counter = 0\n",
@@ -517,23 +755,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Chris\\Anaconda3\\lib\\site-packages\\ipykernel\\__main__.py:4: SettingWithCopyWarning: \n",
+      "c:\\users\\chris\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "C:\\Users\\Chris\\Anaconda3\\lib\\site-packages\\ipykernel\\__main__.py:5: SettingWithCopyWarning: \n",
+      "  after removing the cwd from sys.path.\n",
+      "c:\\users\\chris\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\ipykernel_launcher.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \"\"\"\n"
      ]
     }
    ],
@@ -556,10 +796,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "category_frame.to_csv(\"categories.csv\")\n",
@@ -583,7 +821,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
